create product and rating components.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,3 +38,11 @@ main {
 .product-info {
   padding: 1rem;
 }
+
+.rating span {
+  color:gold;
+}
+
+.btn-primary {
+  background-color: rgb(200, 26, 61);
+}
