--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -105,3 +105,17 @@ main {
 .category-button {
   margin-right: 10px
 }
+
+.contact-card {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: auto;
+}
+
+.map-container {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1px;
+  width: 80%;
+}
