Updated the contact page.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -106,16 +106,40 @@ main {
   margin-right: 10px
 }
 
-.contact-card {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 20px;
-  margin-bottom: auto;
+.row {
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
+
 
 .map-container {
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 1px;
-  width: 80%;
+  margin-bottom: auto;
+  margin-top: auto;
+  width: 70%;
+}
+
+@media  screen and (max-width:530px) {
+  .category-button {
+    width: 100px;
+    height: 30px;
+    font-size:xx-small;
+    margin-right: 2px;
+  }
+
+
+  .navbar-brand {
+    font-size:x-small;
+  }
+
+  .featured-products {
+    font-size:medium;
+  }
+
+  .side-navbar {
+    margin-right: 0%;
+  }
+  
 }
